test dockerfile